# QtAndroidTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
.devcontainer/: Dockerfile  create_android_profile.sh  devcontainer.json
.github/workflows/: build-and-push-devcontainer.yml  ci.yml
QRLiteApp/: CMakeLists.txt
QRLiteApp/src/: main.cpp
QRLiteApp/src/qml/: main.qml
QRLiteLib/: CMakeLists.txt
QRLiteLib/src/: dummy.cpp
QRLiteLib/test/: CMakeLists.txt
QRLiteLib/test/src/: project_test.cpp  test_assets.qrc
QRLiteLib/test/src/images/: corruped_image.xx
